Compile success point reached